@@ -17,11 +17,11 @@ class ReekWorld
   end
 
   def reek(args)
-    run("ruby -Ilib bin/reek #{args}")
+    run("ruby -Ilib -rubygems bin/reek #{args}")
   end
 
   def reek_with_pipe(stdin, args)
-    run("echo \"#{stdin}\" | ruby -Ilib bin/reek #{args}")
+    run("echo \"#{stdin}\" | ruby -Ilib -rubygems bin/reek #{args}")
   end
 
   def rake(name, task_def)
@@ -33,7 +33,7 @@ EOS
     rakefile = Tempfile.new('rake_task', '.')
     rakefile.puts(header + task_def)
     rakefile.close
-    run("rake -f #{rakefile.path} #{name}")
+    run("RUBYOPT=rubygems rake -f #{rakefile.path} #{name}")
     lines = @last_stdout.split("\n")
     if lines.length > 0 and lines[0] =~ /^\(/
       @last_stdout = lines[1..-1].join("\n")
